# AuthZ-demo

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
accounts/fixtures/: users.json
accounts/migrations/: 0001_initial.py
core/: authentication.py  settings.py  urls.py  utils.py
